# survey-data-analyzer

./: .gitignore  Procfile  README.md  app.json  dev-requirements.txt  heroku.yml  pyproject.toml  requirements.txt  settings.json  setup.py  survey_report.json  web_app.py
data/: sample_survey.csv
src/: analyzer.py  data_manager.py  load_sample_data.py  main.py  utils.py  visualizer.py
survey_env/: pyvenv.cfg
