# pyproject.toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survey_data_analyzer"
version = "0.1.0"
description = "Survey data analysis tools"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = []
requires-python = ">=3.8"
